# EventSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/EventSystem/: Callback.h  EventManager.h  EventManager.tpp  EventSystem.h  Types.h
src/: EventManager.cpp
tests/: CMakeLists.txt
